@@ -1,3 +1,8 @@
+2003-11-07  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclIOUtil.c: fix to compiler warning/error with
+	some compilers [Bug 835918]
+	
 2003-11-07  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Makefile: optimized builds define NDEBUG to turn off
